recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:25: error: value droite is not a member of Unit
    avance(100)droite(90)
               ^