recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code

def carre() {
  avance(100)
  droite(90)
  avance(100)
  droite(90)
  avance(100)
  droite(90)
  avance(100)
}
  
  
  
  override def run() {
    carre()
    recule(100)
    gauche(90)
    carre()
    droite(90)
    avance(100)
    droite(90)
    carre()
    recule(100)
    droite(90)
    avance(100)droite(90)
    carre()
    recule(100)
    droite(90)}
    
    